Minors bower fixs and demo

--- a/bower.json
+++ b/bower.json
@@ -2,8 +2,8 @@
   "name": "Codeicons",
   "description": "A simple icon's collection for development languages, programming tools and other work environment.",
   "keywords": [ "programming", "tools", "development", "languages", "icons", "svg", "font" ],
-  "version": "1.1.0",
-  "homepage": "https://vinces.io/",
+  "version": "1.1.1",
+  "homepage": "https://sp0ne.github.io/codeicons/",
   "repository": {
     "type": "git",
     "url": "https://github.com/Sp0ne/codeicons.git"
