--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "Codeicons",
+  "name": "codeicons",
   "description": "A simple icon's collection for development languages, programming tools and other work environment.",
   "keywords": [ "programming", "tools", "development", "languages", "icons", "svg", "font" ],
   "version": "1.1.1",
